--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "json2csv": "^5.0.6",
+    "request": "^2.88.2"
   },
   "devDependencies": {},
   "scripts": {
